# cv-common-library

./: Makefile  README.md  pyproject.toml
cv_common_library/interfaces/: registry.py
cv_common_library/message_broker/base/: connection.py  consumer.py  publisher.py
cv_common_library/message_broker/congif/: __init__.py
cv_common_library/message_brokers/: schemas.py
cv_common_library/message_brokers/kafka/base/: __init__.py  consumer.py  producer.py
cv_common_library/message_brokers/kafka/config/: __init__.py  settings.py
cv_common_library/message_brokers/rabbitmq/base/: connection.py  consumer.py  publisher.py
cv_common_library/message_brokers/rabbitmq/congif/: __init__.py
cv_common_library/registry/: protocol.py  registry.py
cv_common_library/schemas/cv_data_storage/: candidates_result.py  message.py
tests/interfaces/: test_registry.py
