[tool.poetry]
name = "cv-common-library"
version = "0.1.0"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_common_library"}]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.3.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
