[tool.poetry]
name = "cv-common-library"
version = "0.4.3"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_common_library"}]

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.3.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.5"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
